--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -1028,64 +1028,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counts for MetaphaseAlignment:\n",
-      "Total in first half:230\n",
-      "Total in second half:109\n",
-      "Counts for Artefact:\n",
-      "Total in first half:169\n",
-      "Total in second half:109\n",
-      "Counts for Prometaphase:\n",
-      "Total in first half:315\n",
-      "Total in second half:361\n",
-      "Counts for Interphase:\n",
-      "Total in first half:361\n",
-      "Total in second half:445\n",
-      "Counts for Grape:\n",
-      "Total in first half:228\n",
-      "Total in second half:320\n",
-      "Counts for Polylobed:\n",
-      "Total in first half:989\n",
-      "Total in second half:927\n",
-      "Counts for Apoptosis:\n",
-      "Total in first half:202\n",
-      "Total in second half:301\n",
-      "Counts for Metaphase:\n",
-      "Total in first half:63\n",
-      "Total in second half:57\n",
-      "Counts for Binuclear:\n",
-      "Total in first half:373\n",
-      "Total in second half:420\n",
-      "Counts for Elongated:\n",
-      "Total in first half:84\n",
-      "Total in second half:56\n",
-      "Counts for Hole:\n",
-      "Total in first half:106\n",
-      "Total in second half:90\n",
-      "Counts for Folded:\n",
-      "Total in first half:62\n",
-      "Total in second half:21\n",
-      "Counts for SmallIrregular:\n",
-      "Total in first half:141\n",
-      "Total in second half:124\n",
-      "Counts for ADCCM:\n",
-      "Total in first half:150\n",
-      "Total in second half:120\n",
-      "Counts for Anaphase:\n",
-      "Total in first half:73\n",
-      "Total in second half:63\n",
-      "Counts for Large:\n",
-      "Total in first half:55\n",
-      "Total in second half:81\n",
-      "Counts for OutOfFocus:\n",
-      "Total in first half:100\n",
-      "Total in second half:206\n"
+      "Counts for MetaphaseAlignment: first half: 164, first half: 175\n",
+      "Counts for Artefact: first half: 144, first half: 134\n",
+      "Counts for Prometaphase: first half: 282, first half: 394\n",
+      "Counts for Interphase: first half: 473, first half: 333\n",
+      "Counts for Grape: first half: 274, first half: 274\n",
+      "Counts for Polylobed: first half: 829, first half: 1087\n",
+      "Counts for Apoptosis: first half: 225, first half: 278\n",
+      "Counts for Metaphase: first half: 59, first half: 61\n",
+      "Counts for Binuclear: first half: 408, first half: 385\n",
+      "Counts for Elongated: first half: 103, first half: 37\n",
+      "Counts for Hole: first half: 119, first half: 77\n",
+      "Counts for Folded: first half: 51, first half: 32\n",
+      "Counts for SmallIrregular: first half: 114, first half: 151\n",
+      "Counts for ADCCM: first half: 105, first half: 165\n",
+      "Counts for Anaphase: first half: 71, first half: 65\n",
+      "Counts for Large: first half: 58, first half: 78\n",
+      "Counts for OutOfFocus: first half: 239, first half: 67\n"
      ]
     }
    ],
