--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -1028,30 +1028,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counts for MetaphaseAlignment: first half: 164, first half: 175\n",
-      "Counts for Artefact: first half: 144, first half: 134\n",
-      "Counts for Prometaphase: first half: 282, first half: 394\n",
-      "Counts for Interphase: first half: 473, first half: 333\n",
-      "Counts for Grape: first half: 274, first half: 274\n",
-      "Counts for Polylobed: first half: 829, first half: 1087\n",
-      "Counts for Apoptosis: first half: 225, first half: 278\n",
-      "Counts for Metaphase: first half: 59, first half: 61\n",
-      "Counts for Binuclear: first half: 408, first half: 385\n",
-      "Counts for Elongated: first half: 103, first half: 37\n",
-      "Counts for Hole: first half: 119, first half: 77\n",
-      "Counts for Folded: first half: 51, first half: 32\n",
-      "Counts for SmallIrregular: first half: 114, first half: 151\n",
-      "Counts for ADCCM: first half: 105, first half: 165\n",
-      "Counts for Anaphase: first half: 71, first half: 65\n",
-      "Counts for Large: first half: 58, first half: 78\n",
-      "Counts for OutOfFocus: first half: 239, first half: 67\n"
+      "For MetaphaseAlignment: first half has 41.5929203539823%\n",
+      "For Artefact: first half has 52.87769784172662%\n",
+      "For Prometaphase: first half has 56.36094674556213%\n",
+      "For Interphase: first half has 61.66253101736972%\n",
+      "For Grape: first half has 61.131386861313864%\n",
+      "For Polylobed: first half has 48.068893528183715%\n",
+      "For Apoptosis: first half has 66.2027833001988%\n",
+      "For Metaphase: first half has 47.5%\n",
+      "For Binuclear: first half has 46.15384615384615%\n",
+      "For Elongated: first half has 23.57142857142857%\n",
+      "For Hole: first half has 45.40816326530612%\n",
+      "For Folded: first half has 48.19277108433735%\n",
+      "For SmallIrregular: first half has 49.81132075471698%\n",
+      "For ADCCM: first half has 54.81481481481482%\n",
+      "For Anaphase: first half has 48.529411764705884%\n",
+      "For Large: first half has 39.705882352941174%\n",
+      "For OutOfFocus: first half has 63.39869281045751%\n"
      ]
     }
    ],
@@ -1079,7 +1079,7 @@
     "        except KeyError:\n",
     "            continue\n",
     "        second_total += m_a_count\n",
-    "    print(f\"Counts for {phenotypic_class}: first half: {first_total}, first half: {second_total}\")"
+    "    print(f\"For {phenotypic_class}: first half has {first_total/(first_total+second_total)*100}%\")"
    ]
   },
   {
