finish split data

--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7511, 1292)\n"
+     ]
+    }
+   ],
    "source": [
     "# load x (features) and y (labels) dataframes\n",
     "load_path = pathlib.Path(\"../0.download_data/data/training_data.csv.gz\")\n",
@@ -50,83 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_data.loc[training_data[\"Metadata_DNA\"] == \"LT0066_19/LT0066_19_287_1.tif\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For MetaphaseAlignment: first half has 10.619469026548673%\n",
-      "For Artefact: first half has 6.83453237410072%\n",
-      "For Prometaphase: first half has 14.940828402366865%\n",
-      "For Interphase: first half has 15.75682382133995%\n",
-      "For Grape: first half has 5.839416058394161%\n",
-      "For Polylobed: first half has 8.507306889352819%\n",
-      "For Apoptosis: first half has 14.7117296222664%\n",
-      "For Metaphase: first half has 12.5%\n",
-      "For Binuclear: first half has 21.689785624211854%\n",
-      "For Elongated: first half has 23.57142857142857%\n",
-      "For Hole: first half has 19.387755102040817%\n",
-      "For Folded: first half has 32.53012048192771%\n",
-      "For SmallIrregular: first half has 16.9811320754717%\n",
-      "For ADCCM: first half has 31.11111111111111%\n",
-      "For Anaphase: first half has 34.55882352941176%\n",
-      "For Large: first half has 18.38235294117647%\n",
-      "For OutOfFocus: first half has 5.88235294117647%\n"
+      "(6387, 1292)\n"
      ]
     }
    ],
-   "source": [
-    "class_values = {\"MetaphaseAlignment\": 0}\n",
-    "image_locations = training_data[\"Metadata_DNA\"].unique()\n",
-    "np.random.shuffle(image_locations)\n",
-    "num_train = int(len(image_locations)*0.85)\n",
-    "image_locations_train = image_locations[num_train:]\n",
-    "image_locations_test = image_locations[:num_train]\n",
-    "\n",
-    "for phenotypic_class in training_data[\"Mitocheck_Phenotypic_Class\"].unique():\n",
-    "    first_total = 0\n",
-    "    for image_location in image_locations_train:\n",
-    "        try:\n",
-    "            m_a_count = training_data.loc[training_data[\"Metadata_DNA\"] == image_location][\"Mitocheck_Phenotypic_Class\"].value_counts()[phenotypic_class]\n",
-    "        except KeyError:\n",
-    "            continue\n",
-    "        first_total += m_a_count\n",
-    "\n",
-    "    second_total = 0\n",
-    "    for image_location in image_locations_test:\n",
-    "        try:\n",
-    "            m_a_count = training_data.loc[training_data[\"Metadata_DNA\"] == image_location][\"Mitocheck_Phenotypic_Class\"].value_counts()[phenotypic_class]\n",
-    "        except KeyError:\n",
-    "            continue\n",
-    "        second_total += m_a_count\n",
-    "    print(f\"For {phenotypic_class}: first half has {first_total/(first_total+second_total)*100}%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# test_data is pandas dataframe with test split, stratified by Mitocheck_Phenotypic_Class\n",
     "test_data = training_data.groupby(\"Mitocheck_Phenotypic_Class\", group_keys=False).apply(\n",
@@ -142,9 +84,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>test</td>\n",
+       "      <td>5868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>test</td>\n",
+       "      <td>1756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>test</td>\n",
+       "      <td>1746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>test</td>\n",
+       "      <td>4602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>test</td>\n",
+       "      <td>1751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7506</th>\n",
+       "      <td>train</td>\n",
+       "      <td>7506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7507</th>\n",
+       "      <td>train</td>\n",
+       "      <td>7507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7508</th>\n",
+       "      <td>train</td>\n",
+       "      <td>7508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7509</th>\n",
+       "      <td>train</td>\n",
+       "      <td>7509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7510</th>\n",
+       "      <td>train</td>\n",
+       "      <td>7510</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7511 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      label  index\n",
+       "0      test   5868\n",
+       "1      test   1756\n",
+       "2      test   1746\n",
+       "3      test   4602\n",
+       "4      test   1751\n",
+       "...     ...    ...\n",
+       "7506  train   7506\n",
+       "7507  train   7507\n",
+       "7508  train   7508\n",
+       "7509  train   7509\n",
+       "7510  train   7510\n",
+       "\n",
+       "[7511 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create pandas dataframe with all indexes and their respective labels\n",
     "index_data = []\n",
@@ -165,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
