combine datasets, remove holdout

--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "\n",
     "import sys\n",
     "sys.path.append(\"../utils\")\n",
-    "from split_utils import get_features_data, get_random_images_indexes, get_representative_images, get_image_indexes"
+    "from split_utils import get_features_data"
    ]
   },
   {
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7511, 1292)\n"
+      "(5523, 1292)\n"
      ]
     }
    ],
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6387, 1292)\n"
+      "(4694, 1292)\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,27 +116,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>test</td>\n",
-       "      <td>5868</td>\n",
+       "      <td>1825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>test</td>\n",
-       "      <td>1756</td>\n",
+       "      <td>1114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>test</td>\n",
-       "      <td>1746</td>\n",
+       "      <td>1798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>test</td>\n",
-       "      <td>4602</td>\n",
+       "      <td>4607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>test</td>\n",
-       "      <td>1751</td>\n",
+       "      <td>4557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -144,53 +144,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7506</th>\n",
+       "      <th>5518</th>\n",
        "      <td>train</td>\n",
-       "      <td>7506</td>\n",
+       "      <td>5515</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7507</th>\n",
+       "      <th>5519</th>\n",
        "      <td>train</td>\n",
-       "      <td>7507</td>\n",
+       "      <td>5516</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7508</th>\n",
+       "      <th>5520</th>\n",
        "      <td>train</td>\n",
-       "      <td>7508</td>\n",
+       "      <td>5518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7509</th>\n",
+       "      <th>5521</th>\n",
        "      <td>train</td>\n",
-       "      <td>7509</td>\n",
+       "      <td>5520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7510</th>\n",
+       "      <th>5522</th>\n",
        "      <td>train</td>\n",
-       "      <td>7510</td>\n",
+       "      <td>5522</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7511 rows × 2 columns</p>\n",
+       "<p>5523 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      label  index\n",
-       "0      test   5868\n",
-       "1      test   1756\n",
-       "2      test   1746\n",
-       "3      test   4602\n",
-       "4      test   1751\n",
+       "0      test   1825\n",
+       "1      test   1114\n",
+       "2      test   1798\n",
+       "3      test   4607\n",
+       "4      test   4557\n",
        "...     ...    ...\n",
-       "7506  train   7506\n",
-       "7507  train   7507\n",
-       "7508  train   7508\n",
-       "7509  train   7509\n",
-       "7510  train   7510\n",
+       "5518  train   5515\n",
+       "5519  train   5516\n",
+       "5520  train   5518\n",
+       "5521  train   5520\n",
+       "5522  train   5522\n",
        "\n",
-       "[7511 rows x 2 columns]"
+       "[5523 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
