--- a/2.train_model/train_model.ipynb
+++ b/2.train_model/train_model.ipynb
@@ -185,10 +185,10 @@
        "      <td>-0.625385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MetaphaseAlignment</td>\n",
-       "      <td>937.692308</td>\n",
-       "      <td>521.048077</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Prometaphase</td>\n",
+       "      <td>1305.853333</td>\n",
+       "      <td>656.426667</td>\n",
        "      <td>LT0066_19</td>\n",
        "      <td>287</td>\n",
        "      <td>1</td>\n",
@@ -197,16 +197,16 @@
        "      <td>LT0066_19/LT0066_19_287_1.tif</td>\n",
        "      <td>ch-TOG</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.947300</td>\n",
-       "      <td>-0.564136</td>\n",
-       "      <td>0.333336</td>\n",
-       "      <td>-1.584454</td>\n",
-       "      <td>0.891666</td>\n",
-       "      <td>1.223252</td>\n",
-       "      <td>-0.359166</td>\n",
-       "      <td>-0.826366</td>\n",
-       "      <td>2.115734</td>\n",
-       "      <td>-1.241848</td>\n",
+       "      <td>1.581095</td>\n",
+       "      <td>0.635676</td>\n",
+       "      <td>-0.597231</td>\n",
+       "      <td>-1.204226</td>\n",
+       "      <td>0.247975</td>\n",
+       "      <td>0.923955</td>\n",
+       "      <td>0.060671</td>\n",
+       "      <td>-2.054225</td>\n",
+       "      <td>1.040119</td>\n",
+       "      <td>-0.528491</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -233,54 +233,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5515</th>\n",
-       "      <td>OutOfFocus</td>\n",
-       "      <td>411.508929</td>\n",
-       "      <td>361.410714</td>\n",
-       "      <td>LT0601_01</td>\n",
-       "      <td>217</td>\n",
-       "      <td>49</td>\n",
-       "      <td>1</td>\n",
-       "      <td>LT0601_01_217</td>\n",
-       "      <td>LT0601_01/LT0601_01_217_49.tif</td>\n",
-       "      <td>ABCB8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.724141</td>\n",
-       "      <td>4.936666</td>\n",
-       "      <td>2.227179</td>\n",
-       "      <td>-1.458934</td>\n",
-       "      <td>-0.774605</td>\n",
-       "      <td>-1.679045</td>\n",
-       "      <td>-2.429998</td>\n",
-       "      <td>-0.826404</td>\n",
-       "      <td>0.730059</td>\n",
-       "      <td>1.286466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5516</th>\n",
-       "      <td>OutOfFocus</td>\n",
-       "      <td>808.740741</td>\n",
-       "      <td>536.296296</td>\n",
-       "      <td>LT0601_01</td>\n",
-       "      <td>217</td>\n",
-       "      <td>49</td>\n",
-       "      <td>1</td>\n",
-       "      <td>LT0601_01_217</td>\n",
-       "      <td>LT0601_01/LT0601_01_217_49.tif</td>\n",
-       "      <td>ABCB8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.463249</td>\n",
-       "      <td>4.504158</td>\n",
-       "      <td>4.272579</td>\n",
-       "      <td>-1.529108</td>\n",
-       "      <td>-0.932259</td>\n",
-       "      <td>-0.898132</td>\n",
-       "      <td>-3.123627</td>\n",
-       "      <td>-0.719680</td>\n",
-       "      <td>-0.425281</td>\n",
-       "      <td>1.687259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>5518</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>383.075269</td>\n",
@@ -305,6 +257,30 @@
        "      <td>1.981009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5519</th>\n",
+       "      <td>OutOfFocus</td>\n",
+       "      <td>975.747253</td>\n",
+       "      <td>293.868132</td>\n",
+       "      <td>LT0603_03</td>\n",
+       "      <td>2</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LT0603_03_2</td>\n",
+       "      <td>LT0603_03/LT0603_03_2_49.tif</td>\n",
+       "      <td>failed QC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.277908</td>\n",
+       "      <td>5.959773</td>\n",
+       "      <td>2.362540</td>\n",
+       "      <td>-1.000032</td>\n",
+       "      <td>-0.723652</td>\n",
+       "      <td>-1.460720</td>\n",
+       "      <td>-1.919148</td>\n",
+       "      <td>-0.301130</td>\n",
+       "      <td>0.779582</td>\n",
+       "      <td>3.084642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>5520</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>898.614815</td>\n",
@@ -327,6 +303,30 @@
        "      <td>-0.056216</td>\n",
        "      <td>0.714624</td>\n",
        "      <td>1.612470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5521</th>\n",
+       "      <td>OutOfFocus</td>\n",
+       "      <td>946.758621</td>\n",
+       "      <td>281.689655</td>\n",
+       "      <td>LT0603_03</td>\n",
+       "      <td>2</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LT0603_03_2</td>\n",
+       "      <td>LT0603_03/LT0603_03_2_49.tif</td>\n",
+       "      <td>failed QC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.152000</td>\n",
+       "      <td>11.078217</td>\n",
+       "      <td>2.460915</td>\n",
+       "      <td>-0.989282</td>\n",
+       "      <td>-1.141723</td>\n",
+       "      <td>-1.424882</td>\n",
+       "      <td>-2.959780</td>\n",
+       "      <td>-1.999795</td>\n",
+       "      <td>0.702134</td>\n",
+       "      <td>2.306039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5522</th>\n",
@@ -354,7 +354,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4694 rows × 1292 columns</p>\n",
+       "<p>4640 rows × 1292 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -363,12 +363,12 @@
        "1                      Artefact        1117.070423         342.732394   \n",
        "2                      Artefact        1116.500000         362.000000   \n",
        "3                      Artefact        1106.348485         370.469697   \n",
-       "4            MetaphaseAlignment         937.692308         521.048077   \n",
+       "5                  Prometaphase        1305.853333         656.426667   \n",
        "...                         ...                ...                ...   \n",
-       "5515                 OutOfFocus         411.508929         361.410714   \n",
-       "5516                 OutOfFocus         808.740741         536.296296   \n",
        "5518                 OutOfFocus         383.075269         220.198925   \n",
+       "5519                 OutOfFocus         975.747253         293.868132   \n",
        "5520                 OutOfFocus         898.614815         302.407407   \n",
+       "5521                 OutOfFocus         946.758621         281.689655   \n",
        "5522                 OutOfFocus         998.977099         421.229008   \n",
        "\n",
        "     Metadata_Plate  Metadata_Well  Metadata_Frame  Metadata_Site  \\\n",
@@ -376,12 +376,12 @@
        "1         LT0066_19            287               1              1   \n",
        "2         LT0066_19            287               1              1   \n",
        "3         LT0066_19            287               1              1   \n",
-       "4         LT0066_19            287               1              1   \n",
+       "5         LT0066_19            287               1              1   \n",
        "...             ...            ...             ...            ...   \n",
-       "5515      LT0601_01            217              49              1   \n",
-       "5516      LT0601_01            217              49              1   \n",
        "5518      LT0601_01            217              49              1   \n",
+       "5519      LT0603_03              2              49              1   \n",
        "5520      LT0603_03              2              49              1   \n",
+       "5521      LT0603_03              2              49              1   \n",
        "5522      LT0603_03              2              49              1   \n",
        "\n",
        "     Metadata_Plate_Map_Name                    Metadata_DNA Metadata_Gene  \\\n",
@@ -389,12 +389,12 @@
        "1              LT0066_19_287   LT0066_19/LT0066_19_287_1.tif        ch-TOG   \n",
        "2              LT0066_19_287   LT0066_19/LT0066_19_287_1.tif        ch-TOG   \n",
        "3              LT0066_19_287   LT0066_19/LT0066_19_287_1.tif        ch-TOG   \n",
-       "4              LT0066_19_287   LT0066_19/LT0066_19_287_1.tif        ch-TOG   \n",
+       "5              LT0066_19_287   LT0066_19/LT0066_19_287_1.tif        ch-TOG   \n",
        "...                      ...                             ...           ...   \n",
-       "5515           LT0601_01_217  LT0601_01/LT0601_01_217_49.tif         ABCB8   \n",
-       "5516           LT0601_01_217  LT0601_01/LT0601_01_217_49.tif         ABCB8   \n",
        "5518           LT0601_01_217  LT0601_01/LT0601_01_217_49.tif         ABCB8   \n",
+       "5519             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
        "5520             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
+       "5521             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
        "5522             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
        "\n",
        "      ...  efficientnet_1270 efficientnet_1271  efficientnet_1272  \\\n",
@@ -402,12 +402,12 @@
        "1     ...           1.172767         -0.290257          -0.709041   \n",
        "2     ...           1.093582         -0.323180          -0.663069   \n",
        "3     ...           0.943948         -0.211267          -0.346355   \n",
-       "4     ...           0.947300         -0.564136           0.333336   \n",
+       "5     ...           1.581095          0.635676          -0.597231   \n",
        "...   ...                ...               ...                ...   \n",
-       "5515  ...          -0.724141          4.936666           2.227179   \n",
-       "5516  ...          -1.463249          4.504158           4.272579   \n",
        "5518  ...           0.525202          8.110262           1.777901   \n",
+       "5519  ...           0.277908          5.959773           2.362540   \n",
        "5520  ...           0.553313         10.086836           1.170072   \n",
+       "5521  ...          -0.152000         11.078217           2.460915   \n",
        "5522  ...           0.957360          7.852915           2.886973   \n",
        "\n",
        "      efficientnet_1273  efficientnet_1274  efficientnet_1275  \\\n",
@@ -415,12 +415,12 @@
        "1             -1.431541          -0.063308          -0.412793   \n",
        "2             -1.427502          -0.901764          -0.355080   \n",
        "3             -1.365543          -0.276932           0.023856   \n",
-       "4             -1.584454           0.891666           1.223252   \n",
+       "5             -1.204226           0.247975           0.923955   \n",
        "...                 ...                ...                ...   \n",
-       "5515          -1.458934          -0.774605          -1.679045   \n",
-       "5516          -1.529108          -0.932259          -0.898132   \n",
        "5518          -1.512628          -0.225867          -1.612982   \n",
+       "5519          -1.000032          -0.723652          -1.460720   \n",
        "5520          -1.317000          -0.994644          -1.406541   \n",
+       "5521          -0.989282          -1.141723          -1.424882   \n",
        "5522          -1.147031          -0.557976          -1.454247   \n",
        "\n",
        "      efficientnet_1276  efficientnet_1277  efficientnet_1278  \\\n",
@@ -428,12 +428,12 @@
        "1              0.452684          -1.906647           1.962141   \n",
        "2              0.418053          -2.298449           1.098266   \n",
        "3              0.376514          -1.700348           1.833686   \n",
-       "4             -0.359166          -0.826366           2.115734   \n",
+       "5              0.060671          -2.054225           1.040119   \n",
        "...                 ...                ...                ...   \n",
-       "5515          -2.429998          -0.826404           0.730059   \n",
-       "5516          -3.123627          -0.719680          -0.425281   \n",
        "5518          -0.679415          -2.581475           0.501395   \n",
+       "5519          -1.919148          -0.301130           0.779582   \n",
        "5520          -0.104613          -0.056216           0.714624   \n",
+       "5521          -2.959780          -1.999795           0.702134   \n",
        "5522           0.038499          -0.374986           0.888749   \n",
        "\n",
        "      efficientnet_1279  \n",
@@ -441,15 +441,15 @@
        "1             -0.223039  \n",
        "2             -0.069326  \n",
        "3             -0.625385  \n",
-       "4             -1.241848  \n",
+       "5             -0.528491  \n",
        "...                 ...  \n",
-       "5515           1.286466  \n",
-       "5516           1.687259  \n",
        "5518           1.981009  \n",
+       "5519           3.084642  \n",
        "5520           1.612470  \n",
+       "5521           2.306039  \n",
        "5522           1.141029  \n",
        "\n",
-       "[4694 rows x 1292 columns]"
+       "[4640 rows x 1292 columns]"
       ]
      },
      "execution_count": 2,
@@ -484,8 +484,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4694, 1280)\n",
-      "(4694,)\n"
+      "(4640, 1280)\n",
+      "(4640,)\n"
      ]
     }
    ],
@@ -2106,8 +2106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters: {'C': 10.0, 'l1_ratio': 0.6000000000000001}\n",
-      "Score of best estimator: 0.8019785476663298\n"
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.1}\n",
+      "Score of best estimator: 0.8041639526745415\n"
      ]
     }
    ],
@@ -2160,8 +2160,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4694, 1280)\n",
-      "(4694,)\n"
+      "(4640, 1280)\n",
+      "(4640,)\n"
      ]
     }
    ],
@@ -3568,6 +3568,20 @@
       "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
       "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n"
      ]
     }
@@ -3592,8 +3606,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
-      "Score of best estimator: 0.1421574749087537\n"
+      "Best parameters: {'C': 0.01, 'l1_ratio': 0.1}\n",
+      "Score of best estimator: 0.15943335633696815\n"
      ]
     }
    ],
