--- a/0.download_data/download_data.ipynb
+++ b/0.download_data/download_data.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "import sys\n",
     "sys.path.append(\"../utils\")\n",
-    "from download_utils import parse_outline_data, combine_datasets"
+    "from download_utils import combine_datasets"
    ]
   },
   {
@@ -55,6 +55,7 @@
    "outputs": [],
    "source": [
     "training_data_2006 = pd.read_csv(file_url_2006, compression=\"gzip\", index_col=0)\n",
+    "# remove unnecessary mitocheck object ID as this ID is not present for data repeated in 2015 dataset\n",
     "training_data_2006 = training_data_2006.drop(columns=[\"Mitocheck_Object_ID\"])\n",
     "\n",
     "training_data_2015 = pd.read_csv(file_url_2015, compression=\"gzip\", index_col=0)"
